321hw3/proj3/parser/miniParser.java
/* Generated By:JavaCC: Do not edit this line. miniParser.java */
package parser;
import ast.*;
import java.lang.*;

public class miniParser implements miniParserConstants {

  static final public Program Program() throws ParseException {
        ClassDeclList list1 = new ClassDeclList();
        ClassDecl cl;
    cl = ClassDecl();
                           list1.add(cl);
    label_1:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case CLASS:
        ;
        break;
      default:
        jj_la1[0] = jj_gen;
        break label_1;
      }
      cl = ClassDecl();
                                                                list1.add(cl);
    }
    jj_consume_token(0);
         {if (true) return new Program(list1);}
    throw new Error("Missing return statement in function");
  }

  static final public ClassDecl ClassDecl() throws ParseException {
        Id parentID = null, classID = null;
        VarDeclList varList = new VarDeclList();
        VarDecl var;
        MethodDeclList methList = new MethodDeclList();
        MethodDecl meth;
    jj_consume_token(CLASS);
    classID = ID();
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case EXTENDS:
      jj_consume_token(EXTENDS);
      parentID = ID();
      break;
    default:
      jj_la1[1] = jj_gen;
      ;
    }
    jj_consume_token(L_CURLY_BRACKET);
    label_2:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case BOOLEAN:
      case INT:
      case ID:
        ;
        break;
      default:
        jj_la1[2] = jj_gen;
        break label_2;
      }
      var = VarDecl();
                                                                                    varList.add(var);
    }
    label_3:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case PUBLIC:
        ;
        break;
      default:
        jj_la1[3] = jj_gen;
        break label_3;
      }
      meth = MethodDecl();
                                                                                                                                methList.add(meth);
    }
    jj_consume_token(R_CURLY_BRACKET);
         {if (true) return new ClassDecl(classID, parentID, varList, methList);}
    throw new Error("Missing return statement in function");
  }

  static final public Id ID() throws ParseException {
        parser.Token idName = null;
        Id token = null;;
    idName = jj_consume_token(ID);
                       token = new Id(idName.toString());
         {if (true) return token;}
    throw new Error("Missing return statement in function");
  }

  static final public MethodDecl MethodDecl() throws ParseException {
        Type t = null;
        Id name = null;
        Id name2 = null;
        FormalList form = null;
        VarDeclList varList = new VarDeclList();
        VarDecl var = null;
        StmtList sList = new StmtList();
        Stmt s = null;
    jj_consume_token(PUBLIC);
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case BOOLEAN:
    case INT:
    case VOID:
    case ID:
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case BOOLEAN:
      case INT:
      case ID:
        t = Type();
        break;
      case VOID:
        jj_consume_token(VOID);
        break;
      default:
        jj_la1[4] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
      name = ID();
      jj_consume_token(LPAREN);
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case BOOLEAN:
      case INT:
      case ID:
        form = Formals();
        break;
      default:
        jj_la1[5] = jj_gen;
        ;
      }
      jj_consume_token(RPAREN);
      break;
    case STATIC:
      jj_consume_token(STATIC);
      jj_consume_token(VOID);
      jj_consume_token(MAIN);
                                  name = new Id("main");
      jj_consume_token(LPAREN);
      jj_consume_token(STRING);
      jj_consume_token(L_SQUARE_BRACKET);
      jj_consume_token(R_SQUARE_BRACKET);
      name2 = ID();
      jj_consume_token(RPAREN);
      break;
    default:
      jj_la1[6] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    jj_consume_token(L_CURLY_BRACKET);
    label_4:
    while (true) {
      if (jj_2_1(2)) {
        ;
      } else {
        break label_4;
      }
      var = VarDecl();
                                                                                                                                                                                                    varList.add(var);
    }
    label_5:
    while (true) {
      if (jj_2_2(2)) {
        ;
      } else {
        break label_5;
      }
      s = Statement();
                                       sList.add(s);
    }
    jj_consume_token(R_CURLY_BRACKET);
         {if (true) return new MethodDecl(t, name, form, varList, sList);}
    throw new Error("Missing return statement in function");
  }

  static final public FormalList Formals() throws ParseException {
        Type varType;
        Id varName;
        Formal form;
        FormalList formList = new FormalList();
    varType = Type();
    varName = ID();
                                        formList.add(new Formal(varType, varName));
    label_6:
    while (true) {
      if (jj_2_3(2)) {
        ;
      } else {
        break label_6;
      }
      jj_consume_token(COMMA);
      varType = Type();
      varName = ID();
                                                                                                                                        formList.add(new Formal(varType, varName));
    }
         {if (true) return formList;}
    throw new Error("Missing return statement in function");
  }

  static final public VarDecl VarDecl() throws ParseException {
        Type varType = null;
        Id varName = null;
        Exp expression = null;
    varType = Type();
    varName = ID();
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case ASSIGN:
      jj_consume_token(ASSIGN);
      expression = FullExpr();
      break;
    default:
      jj_la1[7] = jj_gen;
      ;
    }
    jj_consume_token(DELIMITER);
         {if (true) return new VarDecl(varType, varName, expression);}
    throw new Error("Missing return statement in function");
  }

  static final public Type Type() throws ParseException {
        Type varType = null;
        Type arrayType = null;
        Id objName = null;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case ID:
      objName = ID();
                         varType = new ObjType(objName);
      break;
    case BOOLEAN:
    case INT:
      varType = ElmType();
      break;
    default:
      jj_la1[8] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case L_SQUARE_BRACKET:
      jj_consume_token(L_SQUARE_BRACKET);
      jj_consume_token(R_SQUARE_BRACKET);
                                                                                          arrayType = new ArrayType(varType);
      break;
    default:
      jj_la1[9] = jj_gen;
      ;
    }
         {if (true) return arrayType==null ? varType : arrayType;}
    throw new Error("Missing return statement in function");
  }

  static final public Type ElmType() throws ParseException {
        Type t;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case BOOLEAN:
      jj_consume_token(BOOLEAN);
                     t = new BoolType();
      break;
    case INT:
      jj_consume_token(INT);
                 t = new IntType();
      break;
    default:
      jj_la1[10] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
         {if (true) return t;}
    throw new Error("Missing return statement in function");
  }

//********************************
  static final public Stmt Statement() throws ParseException {
        Block codeBlock = null;
        Stmt stmtList = null;
        StmtList list = new StmtList();
        Exp e = null;
        Exp e2 = null;
        ExpList eList = null;
        Stmt statement = null;
        Stmt statement2 = null;
        boolean methodCall = false;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case L_CURLY_BRACKET:
      jj_consume_token(L_CURLY_BRACKET);
      label_7:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case IF:
        case RETURN:
        case THIS:
        case WHILE:
        case SYSTEM_OUT_PRINTLN:
        case ID:
        case L_CURLY_BRACKET:
          ;
          break;
        default:
          jj_la1[11] = jj_gen;
          break label_7;
        }
        statement = Statement();
                list.add(statement);
      }
      jj_consume_token(R_CURLY_BRACKET);
                                             codeBlock = new Block(list);
      break;
    case THIS:
    case ID:
      e = Lvalue();
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case ASSIGN:
        jj_consume_token(ASSIGN);
        e2 = FullExpr();
        break;
      case LPAREN:
        jj_consume_token(LPAREN);
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case FALSE:
        case THIS:
        case TRUE:
        case ID:
        case NUM:
        case MINUS:
        case NOT:
        case LPAREN:
          eList = Args();
          break;
        default:
          jj_la1[12] = jj_gen;
          ;
        }
        jj_consume_token(RPAREN);
                                                                            methodCall = true;
        break;
      default:
        jj_la1[13] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
      jj_consume_token(DELIMITER);
                if(e2!=null)
                {
                        statement = new Assign(e, e2);
                        {if (true) return statement;}
                }
                else if(methodCall == true)
                {
                        if(eList == null)
                                eList = new ExpList();
                        if( e instanceof ast.Member)
                                statement = new CallStmt(((Member)e).obj, ((Member)e).var, eList);
                        else if( e instanceof ast.Id)
                                statement = new CallStmt((Exp)new This(), (Id)e, eList);

                        {if (true) return statement;}
                }
      break;
    case IF:
      jj_consume_token(IF);
      jj_consume_token(LPAREN);
      e = Expr();
      jj_consume_token(RPAREN);
      statement = Statement();
      if (jj_2_4(2)) {
        jj_consume_token(ELSE);
        statement2 = Statement();
      } else {
        ;
      }
                                                                                                            statement = new If(e, statement, statement2);
      break;
    case WHILE:
      jj_consume_token(WHILE);
      jj_consume_token(LPAREN);
      e = Expr();
      jj_consume_token(RPAREN);
      statement = Statement();
                                                               statement = new While(e, statement);
      break;
    case SYSTEM_OUT_PRINTLN:
      jj_consume_token(SYSTEM_OUT_PRINTLN);
      jj_consume_token(LPAREN);
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case FALSE:
      case THIS:
      case TRUE:
      case STRING_LITERAL:
      case ID:
      case NUM:
      case MINUS:
      case NOT:
      case LPAREN:
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case FALSE:
        case THIS:
        case TRUE:
        case ID:
        case NUM:
        case MINUS:
        case NOT:
        case LPAREN:
          e = Expr();
          break;
        case STRING_LITERAL:
          e = String_Literal();
          break;
        default:
          jj_la1[14] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
        break;
      default:
        jj_la1[15] = jj_gen;
        ;
      }
                                                                           statement = new Print(e);
      jj_consume_token(RPAREN);
      jj_consume_token(DELIMITER);
      break;
    case RETURN:
      jj_consume_token(RETURN);
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case FALSE:
      case THIS:
      case TRUE:
      case ID:
      case NUM:
      case MINUS:
      case NOT:
      case LPAREN:
        e = Expr();
        break;
      default:
        jj_la1[16] = jj_gen;
        ;
      }
      jj_consume_token(DELIMITER);
                                      statement = new Return(e);
      break;
    default:
      jj_la1[17] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
                if(codeBlock != null)
                {
                        {if (true) return codeBlock;}
                }
                else  if( statement != null)
                        {if (true) return statement;}
    throw new Error("Missing return statement in function");
  }

  static final public Stmt MethodCall() throws ParseException {
        Exp e = null;
        ExpList eList = null;
        Stmt statement = null;
        boolean method = false;
    e = Expr();
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case LPAREN:
      jj_consume_token(LPAREN);
      eList = Args();
      jj_consume_token(RPAREN);
                                             method = true;
      break;
    default:
      jj_la1[18] = jj_gen;
      ;
    }
                if(method = false)
                        statement = new Print(e);
                else
                        statement = new Print(new Call( ((Member) e).obj, ((Member) e).var, eList));
                {if (true) return statement;}
    throw new Error("Missing return statement in function");
  }

  static final public Text String_Literal() throws ParseException {
        parser.Token str = null;
        Text t = null;
    str = jj_consume_token(STRING_LITERAL);
                                t = new Text(str.toString());
         {if (true) return t;}
    throw new Error("Missing return statement in function");
  }

  static final public ExpList Args() throws ParseException {
        Exp expression;
        ExpList eList = new ExpList();
    expression = Expr();
                             eList.add(expression);
    label_8:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case COMMA:
        ;
        break;
      default:
        jj_la1[19] = jj_gen;
        break label_8;
      }
      jj_consume_token(COMMA);
      expression = Expr();
                                                                               eList.add(expression);
    }
         {if (true) return eList;}
    throw new Error("Missing return statement in function");
  }

//**********************************************
  static final public Exp FullExpr() throws ParseException {
        Int num = null;
        Type t = null;
        NewArray array = null;
        Exp e = null;
        Id objName = null;
        ExpList eList = null;
        NewObj obj = null;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case NEW:
      jj_consume_token(NEW);
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case BOOLEAN:
      case INT:
        t = ElmType();
        jj_consume_token(L_SQUARE_BRACKET);
        num = NUM();
        jj_consume_token(R_SQUARE_BRACKET);
                                                    array = new NewArray(t, num);
        break;
      case ID:
        objName = ID();
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case L_SQUARE_BRACKET:
          jj_consume_token(L_SQUARE_BRACKET);
          num = NUM();
          jj_consume_token(R_SQUARE_BRACKET);
                                       array = new NewArray(new ObjType(objName), num);
          break;
        case LPAREN:
          jj_consume_token(LPAREN);
          switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
          case FALSE:
          case THIS:
          case TRUE:
          case ID:
          case NUM:
          case MINUS:
          case NOT:
          case LPAREN:
            eList = Args();
            break;
          default:
            jj_la1[20] = jj_gen;
            ;
          }
          jj_consume_token(RPAREN);
                                              obj = new NewObj(objName, eList);
          break;
        default:
          jj_la1[21] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
        break;
      default:
        jj_la1[22] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
      break;
    case FALSE:
    case THIS:
    case TRUE:
    case ID:
    case NUM:
    case MINUS:
    case NOT:
    case LPAREN:
      e = Expr();
      break;
    default:
      jj_la1[23] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
         if(array != null)
                {if (true) return array;}
        else if(obj != null)
                {if (true) return obj;}
        else if( e != null)
                {if (true) return e;}
        else
                {if (true) return null;}
    throw new Error("Missing return statement in function");
  }

  static final public Exp Expr() throws ParseException {
        Exp e1 = null, e2 = null;
    e1 = AndExpr();
    e2 = OrTail(e1);
         {if (true) return (e2 == null) ? e1:e2;}
    throw new Error("Missing return statement in function");
  }

  static final public Exp OrTail(Exp e0) throws ParseException {
        Exp e1 = null, e2 = null;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case OR:
      jj_consume_token(OR);
      e1 = AndExpr();
                             e1 = new Binop(Binop.OR,e0,e1);
      e2 = OrTail(e1);
      break;
    default:
      jj_la1[24] = jj_gen;
      ;
    }
         {if (true) return (e2 == null) ? e1:e2;}
    throw new Error("Missing return statement in function");
  }

  static final public Exp AndExpr() throws ParseException {
        Exp e1 = null, e2 = null;
    e1 = RelExpr();
    e2 = AndTail(e1);
         {if (true) return (e2 == null) ? e1:e2;}
    throw new Error("Missing return statement in function");
  }

  static final public Exp AndTail(Exp e0) throws ParseException {
        Exp e1 = null, e2 = null;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case AND:
      jj_consume_token(AND);
      e1 = RelExpr();
                              e1 = new Binop(Binop.AND, e0,e1);
      e2 = AndTail(e1);
      break;
    default:
      jj_la1[25] = jj_gen;
      ;
    }
         {if (true) return (e2 == null) ? e1:e2;}
    throw new Error("Missing return statement in function");
  }

  static final public Exp RelExpr() throws ParseException {
        Exp e1 = null, e2 = null;
        Relop rel = null;
    e1 = ArithExpr();
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case EQL:
    case NOT_EQL:
    case LESS_THAN:
    case GREATER_OR_EQL:
    case GRETER_THAN:
    case GRETER_OR_EQL:
      rel = RelOp();
      e2 = ArithExpr();
      break;
    default:
      jj_la1[26] = jj_gen;
      ;
    }
         if(rel != null)
                if(e1 != null)
                        rel.e1 = e1;
                if(e2 != null)
                        rel.e2 = e2;
         /*System.out.println("RelExpr");*/{if (true) return (e2 != null) ? rel:e1;}
    throw new Error("Missing return statement in function");
  }

  static final public Exp ArithExpr() throws ParseException {
        Exp e1 = null, e2 = null;
    e1 = Term();
    e2 = ArithTail(e1);
         /*System.out.println("ArithExpr");*/{if (true) return (e2 == null) ? e1:e2;}
    throw new Error("Missing return statement in function");
  }

  static final public Exp ArithTail(Exp e0) throws ParseException {
        Exp e1 = null, e2 = null;
        int add = Binop.ADD;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case PLUS:
    case MINUS:
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case PLUS:
        jj_consume_token(PLUS);
        break;
      case MINUS:
        jj_consume_token(MINUS);
                      add = Binop.SUB;
        break;
      default:
        jj_la1[27] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
      e1 = Term();
                       e1 = new Binop(add, e0, e1);
      e2 = ArithTail(e1);
      break;
    default:
      jj_la1[28] = jj_gen;
      ;
    }
         {if (true) return (e2 == null) ? e1:e2;}
    throw new Error("Missing return statement in function");
  }

  static final public Exp Term() throws ParseException {
        Exp e1 = null, e2 = null;
    e1 = Factor();
    e2 = TermTail(e1);
         {if (true) return (e2 == null) ? e1:e2;}
    throw new Error("Missing return statement in function");
  }
